<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg"
    tools:context=".ui.ResultActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/result_tv_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/trophy_iv"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/trophy_image_text"
        android:src="@drawable/trophy"/>

    <TextView
        android:id="@+id/congratulations_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/congratulations_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/trophy_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:text="Username"/>

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/secondary_text_dark"
        tools:text="Your score is 9 out of 10"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:background="@color/white"/>

</LinearLayout>
